# starpair

./: .python-version  LICENSE  README.md  pyproject.toml
starpair/: .gitignore  download_by_neighbor.py  download_by_neighbor_thzc.py  download_gaia_for_tess_tois.py  download_gaia_from_thzc.py  download_oneshot.py  download_regions.py  download_thzc_neighbors.py  download_toi_coords.py  habcat_to_gaia_dr3.py  import_culled_pairs_to_db.py  import_pairs_to_db.py  import_tzsc_to_raw_db.py  load_local.py  map_overshoot_pairs.py  merge_fits.py  overshoot_pairs.py
starpair/data/: catalog.md  habstars_2024_10_15.csv
starpair/habcat/: gaia_dr3_habcat.csv  habcat_header.md
starpair/tess/: misssing_tess_dr2.txt  tess_hab_zone_cat_all.csv  tess_hab_zone_cat_all_gaia.csv  tess_hab_zone_cat_d10.csv  tess_hab_zone_cat_d100.csv  tess_hab_zone_cat_d100_gaia.csv  tess_hab_zone_cat_d10_gaia.csv  tess_hab_zone_cat_d15.csv  tess_hab_zone_cat_d15_gaia.csv  tess_hab_zone_cat_d20.csv  tess_hab_zone_cat_d20_gaia.csv  tess_hab_zone_cat_d30.csv  tess_hab_zone_cat_d30_gaia.csv  tess_hab_zone_cat_d5.csv  tess_hab_zone_cat_d5_gaia.csv  tess_hab_zone_cat_d60.csv  tess_hab_zone_cat_d60_gaia.csv
